[package]
name = "qoi"
authors = ["John Peel <john@dgby.org>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An implementation of Phoboslab's QOI image format."
repository = "https://github.com/JohnPeel/qoi"

[features]
default = ["image", "std"]
std = ["byteorder/std", "log/std"]

[dependencies]
log = { version = "0.4", default-features = false }
image = { version = "0.23", optional = true, default-features = false }
byteorder = { version = "1.4", default-features = false }

[dev-dependencies]
image = { version = "0.23", default-features = true }
env_logger = "0.9"
clap = "3.0.0-beta.5"
